@@ -70,10 +70,12 @@ thanks to:
 	Marc E.
 	Tobias Kral
 	Hanno Böck
-	
-	
-
-
+	Pedro Alejandro López-Valencia
+	James Lee
+	Christopher Barrington-Leigh
+	Thomas Schwing
+	Remi Grolleau
+	Julien Gascard
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
