@@ -1,3 +1,10 @@
+2007-02-27  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter: Added a link to the website when mp3 encoding is 
+	  unavailable, so hopefully it will dramatically reduce the number 
+	  of emails I receive.
+	  Logo/Icon updated.
+
 2007-02-26  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Replaced xingheader by xingmux, fixing corruption
